--- a/mainApp/MainAppFrontEnd/src/app/components/login/login.component.html
+++ b/mainApp/MainAppFrontEnd/src/app/components/login/login.component.html
@@ -49,6 +49,8 @@
         >Sign in</button>
       </form>
 
+      <p class="invalid offset-1 col-10" *ngIf="message">{{message}}</p>
+
     </div>
   </div>
 </div>
