FRONTEND - Forms upgraded. Auth with blockchain

--- a/mainApp/MainAppFrontEnd/src/app/components/anomaly/anomaly.component.html
+++ b/mainApp/MainAppFrontEnd/src/app/components/anomaly/anomaly.component.html
@@ -4,26 +4,26 @@
             <h3>Anomaly list</h3>
         </div>
         <div class="card-body">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>TIMESTAMP</th>
-                        <th>ENDPOINT</th>
-                        <th>EMERGENCY LEVEL</th>
-                        <th>TEMPERATURE</th>
-                    </tr>
-
-                </thead>
-                <tbody>
-                    <tr *ngFor="let anomaly of anomalies">
-                        <td>{{tsToDate(anomaly.timestamp)}}</td>
-                        <td>{{anomaly.endpoint}}</td>
-                        <td>{{anomaly.emergencyLevel}}</td>
-                        <td>{{anomaly.temperature}}</td>
-                    </tr>
-
-                </tbody>
-            </table>
+            <div class="table-responsive">
+                <table class="table table-hover">
+                    <thead class="thead-light">
+                        <tr>
+                            <th>TIMESTAMP</th>
+                            <th>ENDPOINT</th>
+                            <th>EMERGENCY LEVEL</th>
+                            <th>TEMPERATURE</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let anomaly of anomalies">
+                            <td>{{tsToDate(anomaly.timestamp)}}</td>
+                            <td>{{anomaly.endpoint}}</td>
+                            <td>{{anomaly.emergencyLevel}}</td>
+                            <td>{{anomaly.temperature}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
