--- a/mainApp/MainAppFrontEnd/src/app/components/client/client.component.html
+++ b/mainApp/MainAppFrontEnd/src/app/components/client/client.component.html
@@ -40,7 +40,7 @@
                         <input
                             type="text"
                             class="form-control"
-                            placeholder="enter a id"
+                            placeholder="enter an id"
                             required
                             [(ngModel)]="clientForm.id_bs"
                             name="id_bs"
@@ -80,7 +80,7 @@
                         <input
                             type="text"
                             class="form-control"
-                            placeholder="enter a id"
+                            placeholder="enter an id"
                             required
                             [(ngModel)]="clientForm.id_s"
                             name="id_s"
