--- a/mainApp/MainAppFrontEnd/src/app/components/login/login.component.html
+++ b/mainApp/MainAppFrontEnd/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container col-md-6">
   <div class="card">
     <div class="card-header">
-      <h3>Sign in to MainApp</h3>
+      <h3>Sign in to Management App</h3>
     </div>
     <div class="card-body">
       <div class="radio-div">
