--- a/anomalyDetectionApp/src/app/components/login/login.component.html
+++ b/anomalyDetectionApp/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container col-md-6">
     <div class="card">
         <div class="card-header">
-            <h3>Sign in to Anomaly Detection App</h3>
+            <h3 align="center">Sign in to Anomaly Detection App</h3>
         </div>
         <div class="card-body">
 
